tt-rss.css
body {
	background : white;
	color : black;
	margin : 0px;
	padding : 0px;
	font-family : sans-serif;
}

h1 {
	font-size : 16pt;	
}

h2 {
	font-size : 14pt;
	font-color : bold;
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #e0e0e0;
}

hr {
	border-width : 0px 0px 1px 0px;
	border-style : dashed;
	border-color : #e0e0e0;
}

a {
	color : black;
	text-decoration : none;
}

a:hover {
	color : #5050aa;
}

table.postTable a {
	color : #5050aa;
}

table.postTable a:hover {
	color : black;
}

td.headlinesToolbar {
	padding : 10px;
}

td.headlinesTitle {
	text-align : right;
	font-size : large;
	font-weight : bold;
}

table.headlinesList td.title, table.headlinesHeader td.title {
	font-weight : bold;
	font-size : large;
	border-width : 0px 0px 1px 0px;
	border-color : #d0d0d0;
	border-style : solid;
	text-align : right;
	padding-bottom : 3px;
}

table.headlinesList td.feedLastUpdateNotice {
	font-size : x-small;
	border-width : 0px 0px 1px 0px;
	border-color : #d0d0d0;
	border-style : solid;
	text-align : left;
	padding-bottom : 3px;
	color : #a0a0a0;
}

table.headlinesList td.headlineUpdated {
	width : 200px;
}

input {
	border : 1px solid #a0a0a0;
}

table.main td.toolbar {
	height : 40px;
	background-color : #f0f0f0;
	padding-right : 10px;
	padding-left : 10px;
	font-size : small;
}

#notify {
	font-weight : bold;
	border : 1px solid #c0c0c0;
	font-size : small;
	display : none;
	background : white;
	-moz-border-radius : 5px;
	padding : 2px 5px 2px 5px;
	width : 300px;
}

table.main td.header {
	font-size : 21pt;
	background-color : #f0f0f0;
	background-image : url("images/header.png");
	background-position : top left;
	background-repeat : repeat-x;
	height : 50px;
	padding-left : 80px;
	padding-top : 30px;
	font-weight : bold;
	color : black;
}

table.main td.feeds {
	width : 250px;
	border-width : 1px 1px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;
	padding : 10px;
}

div.headlineToolbar {
	border-width : 1px 0px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;
	padding : 10px;
}

td.articleToolbar {
	border-width : 0px 0px 1px 0px;
	border-color : #c0c0c0;
	border-style : solid;
	padding : 10px;
	background : #f0f0f0;
}
table.main td.headlines {
	height : 25%;
	border-width : 1px 0px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;
}

table.main td.prefContent {
	padding : 10px;
	border-width : 1px 0px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;

}

table.main td.headlinesToolbarBox {
	padding : 0px;
	height : 20px;
	border-width : 1px 0px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;
}

table.main td.content {
	padding : 0px;
	border-width : 1px 0px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;
}

table.main td.notify {
	height : 40px;
	border-width : 1px 0px 0px 0px;
	border-color : #c0c0c0;
	border-style : solid;
	font-size : x-small;
	text-align : center;
	color : gray;
	background-color : #f0f0f0;
	background-image : url("images/header_rev.png");
	background-position : top left;
	background-repeat : repeat-x;

}

.evenGrayed {
	background-color : #f0f0f0;
	color : #909090;
}

.oddGrayed {
	color : #909090;
}

.even {
	background-color : #f0f0f0;
}

.evenUnread {
	background-color : #f0f0f0;
	font-weight : bold;
}

.oddUnread {
	font-weight : bold;
}

.invisible {
	display : none;
}

table.prefAddFeed td {
	padding : 2px;
}

table.prefAddFeed input {
	width : 250px;
}

table.prefFeedList tr.title td, table.prefFilterList tr.title td,
	table.headlinesList tr.title td {
	font-weight : bold;
	border-width : 0px 0px 1px 0px;
	border-color : #f0f0f0;
	border-style : solid;
}

.evenUnreadSelected, .evenSelectedUnread {
	background-color : #e0e0ff;
	font-weight : bold;
}

.oddUnreadSelected, .oddSelectedUnread {
	background-color : #e0e0ff;
	font-weight : bold;
}

.evenSelected {
	background-color : #e0e0ff;
}

.oddSelected {
	background-color : #e0e0ff;
}

.disabledButton {
	font-family : tahoma, sans-serif;
	border : 1px solid #d0d0d0;
	background : white;
	color : #909090;	
	padding : 1px 5px 1px 5px;
	font-size : small;
}

.disabledButton:hover {
	background : white;
	text-decoration : none;
	color : #909090;
}

.button {
	font-family : tahoma, sans-serif;
	border : 1px solid #d0d0d0;
	background-image : url("images/button.png");
	background-position : top;
	background-repeat : repeat-x;
	background-color : white;
	color : black;	
	padding : 1px 5px 1px 5px;
}

/* .button:hover {
	background : white;
	text-decoration : none;
	color : black;
} */

a.button {
	padding : 2px 5px 2px 5px;
}


.buttonWarn {
	font-family : tahoma, sans-serif;
	border : 1px solid #d0d0d0;
	background-image : url("images/button.png");
	background-position : top;
	background-repeat : repeat-x;
	background-color : white;
	color : black;	
	padding : 2px 5px 2px 5px;
	font-size : small;
}

.buttonWarn:hover {
	background : #fff0f0;
	text-decoration : none;
	color : black;
}

td.headlineUpdateMark {
	width : 25px;
	text-align : center;
}

div.errorBox {
	border : 1px solid #c0c0c0;
	padding : 20px;
	margin : 20px;
	background : #f0f0f0;
}

tr.titleTop, tr.titleBottom, tr.titleTopBottom {
	background : #f0f0f0;
}

td.titleIcon {
	border-width : 0px 0px 1px 0px;
	border-color : #d0d0d0;
	border-style : solid;
}

tr.titleTop td {
	padding : 5px 10px 0px 10px;
}

tr.titleBottom td {
	padding : 3px 10px 5px 10px;
	border-width : 0px 0px 1px 0px;
	border-color : #d0d0d0;
	border-style : solid;
}

tr.titleTopBottom td {
	padding : 3px 10px 5px 10px;
	border-width : 1px 0px 1px 0px;
	border-color : #d0d0d0;
	border-style : solid;
}

td.post {
	padding : 20px;
}

#piggie {
	width : 400;
	height : 400;
	left : 50;
	background-color : white;
	display : none;
	z-index : 3;
	background-image : url("http://madoka.spb.ru/stuff/fox/piggie.png");
	background-position : center center;
	background-repeat : no-repeat;
	position : absolute;
	border : 1px solid pink;	
	margin-left : auto;
	margin-right : auto;
	-moz-border-radius : 10px;
	opacity : 0.8;
}

img.feedIcon {
	margin : 3px;
	border : 1px solid #c0c0c0;
}

#iedit_title, #iedit_link, #iedit_regexp, #iedit_descr {
	width : 100%;
	padding-left : 2px;
}

div.expPane {
	margin : 15px;
}

iframe.contentFrame, iframe.headlinesFrame {
	width : 100%;
	border-width : 0px;
	padding : 0px;
	margin : 0px;
	height : 100%;
}

